
[tool.poetry]
name = "volosti-server-common"
version = "0.1.dev1"
description = "Общий исходный код реализаций сервера Волостей"
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/volosti-server-common"
repository = "https://github.com/volosti/volosti-server-common"

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = { version = ">=0.17.0", optional = true }
alembic = "^1.8.1"
asyncpg = { version = ">=0.26.0", optional = true }
cryptography = { version = "^37.0.4", optional = true }
jinja2 = { version = "^3.1.2", optional = true }
pycryptodome = { version = "^3.15.0", optional = true }
sqlalchemy = "^1.4.41"
volosti-common = { version = "^0.1.dev0", allow-prereleases = true }

[tool.poetry.extras]
openssl = ["cryptography"]
postgresql = ["asyncpg"]
pycryptodome = ["pycryptodome"]
sqlite = ["aiosqlite"]
wui = ["jinja2"]
all = [
    "aiosqlite",
    "asyncpg",
    "cryptography",
    "jinja2",
    "pycryptodome",
]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = ">=0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
sqlalchemy2-stubs = { version = ">=0.0.2a27", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "wemake"
src_paths = ["volosti_server_common", "tests"]

[tool.mypy]
files = ["volosti_server_common", "tests"]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]
